# Ecommerce

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
app/: narrative.py  streamlit_app.py
docs/: architecture.md  narrative-demo-script.md  operating-model-note.md  risk-and-limitations.md  self-review.md
examples/traces/: blocked_path.jsonl  conditional_path.jsonl  escalation_path.jsonl  happy_path.jsonl  subscription_renewal.jsonl
policies/: approved_services.yaml  auto_buy.yaml  auto_renew.yaml  budget.yaml  data_sharing.yaml  delivery.yaml  materials.yaml  promotions.yaml  retailers.yaml  returns.yaml  subscription_terms.yaml  substitution.yaml
src/gacct/: __init__.py
src/gacct/agents/: __init__.py  consumer_agent.py  retailer_agent.py  subscription_service.py
src/gacct/approvals/: __init__.py  service.py
src/gacct/domain/: __init__.py  actions.py  approvals.py  consumer.py  context.py  decisions.py  policies.py  product.py  trace.py
src/gacct/governance/: __init__.py  atm.py  engine.py  paa.py  pag.py
src/gacct/intent/: __init__.py  parser.py
src/gacct/mcp/: __init__.py  messages.py  transport.py
src/gacct/policy/: __init__.py  evaluator.py  loader.py
src/gacct/reasoning/: __init__.py  engine.py
src/gacct/scenarios/: __init__.py  blocked_path.py  conditional_path.py  escalation_path.py  fixtures.py  happy_path.py  runner.py  (+1 more)
tests/: conftest.py  test_bypass.py  test_engine.py  test_intent_parser.py  test_mcp.py  test_pag.py  test_reasoning.py  test_scenarios.py  test_subscription_scenario.py  test_trace_store.py
(+2 files in other folders)
