[project]
name = "gacct"
version = "0.1.0"
description = "Governed Agentic Commerce Control Tower — a SARC-style runtime governance reference for delegated commerce"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "streamlit>=1.32",
    "networkx>=3.2",
    "plotly>=5.20",
    "pandas>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
